# pc-manager

./: pyproject.toml  requirements.txt
pc_manager/: app.py
pc_manager/controller/: credential.py  custom_operation.py  machine.py
pc_manager/model/: __init__.py  base.py  credential.py  custom_operation.py  hardware_features.py  machine.py  software_platform.py
pc_manager/templates/: add_credential.html  add_custom_operation.html  add_machine.html  credentials.html  custom_operations.html  edit_credential.html  edit_custom_operation.html  edit_machine.html  error.html  index.html  machines.html  success.html
pc_manager/utils/: __init__.py
